refactor(project): remove unused fields and adjust project entity
